--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,17 +1,23 @@
 ---
 - name: detect existing Flynn CLI
   stat:
-    path: "{{ flynn_cli.executable_path }}"
+    path: "{{ flynn_cli_executable }}"
   register: existing_flynn
 
 - name: download Flynn CLI
   when: existing_flynn.stat.exists == false
   become: true
-  shell: "curl -sSL -A \"`uname -sp`\" https://dl.flynn.io/cli | zcat >{{ flynn_cli.executable_path }}"
+  shell: "curl -sSL -A \"`uname -sp`\" https://dl.flynn.io/cli | zcat >{{ flynn_cli_executable }}"
   args:
     executable: /bin/bash
 
-- include: user_config.yml
+- name: add clusters to users
+  include: user_config_cluster.yml
+  when: flynn_cli_users and flynn_cli_clusters
+  # debug: 'msg="username: {{ username }} cluster: {{ cluster }}"'
   vars:
-    username: "{{ item }}"
-  with_items: "{{ flynn_cli.users }}"
+    username: "{{ item.0 }}"
+    cluster: "{{ item.1 }}"
+  with_nested:
+  - "{{ flynn_cli_users }}"
+  - "{{ flynn_cli_clusters }}"
