--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,6 +7,8 @@
 - name: download Flynn CLI
   when: existing_flynn.stat.exists == false
   become: true
+  # The Flynn project needs to use compression _at the protocol layer_ instead.
+  # Because this URL returns a gzip-compressed file, Ansible has no straightforward way to place it.
   shell: "curl -sSL -A \"`uname -sp`\" https://dl.flynn.io/cli | zcat >{{ flynn_cli_executable }}"
   args:
     executable: /bin/bash
